# flower

./: .gitignore  Cargo.toml  README.md  justfile
flower/: Cargo.toml
flower-bin/: Cargo.toml
flower-bin/src/: main.rs
flower-ffi/: Cargo.toml
flower-ffi/src/: lib.rs
flower-jni/: Cargo.toml
flower-jni/src/: lib.rs
flower/src/: lib.rs  util.rs
flower/src/app/: dispatcher.rs  logger.rs  router.rs
flower/src/app/outbound/: manager.rs  selector.rs
flower/src/common/: mod.rs  process.rs
flower/src/config/conf/: config.rs
flower/src/config/internal/: config.proto  config.rs
flower/src/config/json/tests/: test_config.rs
flower/src/mobile/: logger.rs
flower/src/proxy/: mod.rs  stream.rs
flower/src/proxy/drop/: tcp.rs
flower/src/proxy/http/inbound/: tcp.rs
flower/src/proxy/quic/inbound/: udp.rs
flower/src/proxy/quic/outbound/: mod.rs  tcp.rs
flower/src/proxy/tls/inbound/: tcp.rs
flower/src/proxy/tls/outbound/: tcp.rs
flower/src/proxy/trojan/inbound/: mod.rs  tcp.rs
flower/src/proxy/tun/netstack/lwip/include/lwip/apps/: snmp_core.h  snmp_scalar.h  snmp_table.h  snmp_threadsync.h
flower/src/proxy/vmess/: tcp.rs  udp.rs
flower/src/proxy/ws/inbound/: tcp.rs
flower/src/proxy/ws/outbound/: tcp.rs
flower/tests/: common.rs  test_in_chain_1.rs  test_out_chain_1.rs  test_out_chain_3.rs  test_out_chain_4.rs  test_out_chain_5.rs  test_out_chain_6.rs  test_out_chain_7.rs  test_out_chain_8.rs  test_ws_amux_trojan.rs  test_ws_trojan.rs
misc/: build_cross.sh
